Better errors in modules. (Close #277)

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -25,7 +25,7 @@
         {{info-general text=general_info}}
     {{/if}}
     {{#if general_error}}
-        {{warning-general text=general_error}}
+        {{warning-close-general text=general_error}}
     {{/if}}
     {{#if submission_info}}
         {{info-general text=submission_info disable_warning=true}}
