--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -24,6 +24,6 @@
         </div>
     </div>
     {{#if general_error}}
-        {{warning-general text=general_error}}
+        {{warning-close-general text=general_error}}
     {{/if}}
 </div>
