--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -22,7 +22,7 @@
     </div>
     {{#if general_error}}
         <div style="margin-top:20px">
-            {{warning-general text=general_error}}
+            {{warning-close-general text=general_error}}
         </div>
     {{/if}}
 </div>
