--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -23,22 +23,26 @@
   {{#if show}}
   <div class="panel-body">
       {{#if module.is_programming}}
-        {{code-module module=module store=store id=module.id submit_done="submit_done" actionReceiver=module_logic opened=opened}}
+        {{code-module module=module store=store id=module.id submit_done="submit_done" submit_succ_done="submit_succ_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_quiz}}
-        {{quiz-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
+        {{quiz-module module=module store=store submit_done="submit_done" submit_succ_done="submit_succ_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_general}}
-        {{file-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
+        {{file-module module=module store=store submit_done="submit_done" submit_succ_done="submit_succ_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_sortable}}
-        {{sortable-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
+        {{sortable-module module=module store=store submit_done="submit_done" submit_succ_done="submit_succ_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if module.is_text}}
-        {{text-module module=module store=store submit_done="submit_done" actionReceiver=module_logic opened=opened}}
+        {{text-module module=module store=store submit_done="submit_done" submit_succ_done="submit_succ_done" actionReceiver=module_logic opened=opened}}
       {{/if}}
       {{#if opened}}
-        <button class="btn btn-task btn-primary hidden-print" style="margin-top:20px" {{action "submit"}}>Odevzdat</button>
+        {{#unless submitting}}
+            <button class="btn btn-task btn-primary hidden-print" style="margin-top:20px" {{action "submit"}}>Odevzdat</button>
+        {{else}}
+            <button class="btn btn-task btn-primary hidden-print disabled" style="margin-top:20px">Odevzdávám...</button>
+        {{/unless}}
       {{/if}}
   </div>
   {{/if}}
