--- a/app/templates/components/text-module.hbs
+++ b/app/templates/components/text-module.hbs
@@ -16,7 +16,7 @@
     </form>
     {{#if general_error}}
         <div style="margin-top:20px">
-            {{warning-general text=general_error}}
+            {{warning-close-general text=general_error}}
         </div>
     {{/if}}
 </div>
