Fix responsibility of images.
 * Set maxwidth of images in task-assignment and task-solution to 100 %.
   (Close #272).
 * Set maxwidth of images in forum to 100 % (@krejdom), this allows adding
   images to forum without breaking the whole page. However, it is still
   to consired wheter allow loading from uknown resources (e.g. foreign
   domains).

--- a/app/styles/pages/task.scss
+++ b/app/styles/pages/task.scss
@@ -10,3 +10,8 @@
         display: block !important;
     }
 }
+
+:matches(#task-assignment #task-solution) img {
+    max-width: 100%;
+    height: auto;
+}
