--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,7 +1,9 @@
 <div style="margin:20px">
     <h3 class="visible-print">Řešení</h3>
     {{#if model.details.solution}}
-        {{{model.details.solution}}}
+        <div class="task-assignment">
+            {{{model.details.solution}}}
+        </div>
     {{else}}
         Úlohu je ještě možné řešit nebo nebyla ještě opravena.
     {{/if}}
