Allow nested thread posts only to depth 3.
Close #279.

--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -62,9 +62,21 @@
             </div>
         {{/unless}}
       {{/if}}
-      <!-- vnorena reakcia -->
-      {{#each model.reaction as |react|}}
-          {{thread-post model=react store=store}}
-      {{/each}}
+
+      <!-- vnorena reakcia vnorene -->
+      {{#unless depth_exceeded}}
+          {{#each model.reaction as |react|}}
+              {{thread-post model=react store=store depth=depth_inc}}
+          {{/each}}
+      {{/unless}}
+
     </div>
+
+  <!-- vnorena reakcia nevnorene -->
+  {{#if depth_exceeded}}
+      {{#each model.reaction as |react|}}
+          {{thread-post model=react store=store depth=depth_inc}}
+      {{/each}}
+  {{/if}}
+
   </li>
