--- a/app/templates/components/text-module.hbs
+++ b/app/templates/components/text-module.hbs
@@ -1,4 +1,4 @@
-<div class="row" style="margin-left:0px; margin-right:10px">
+<div class="row" style="margin-left:0px; margin-right:10px; margin-bottom: 20px;">
     {{{module.description}}}
 </div>
 <div style="margin-left:0px">
