Lets take all the participants!

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -16,7 +16,7 @@
     <p>
     S&nbsp;ostatními účastníky i&nbsp;organizátory semináře se můžeš během roku potkat na několika výletech.
     Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na <a href="http://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
-    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů a&nbsp;studují střední školu v&nbsp;České nebo Slovenské republice) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
+    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
     </p>
 
     <h3>Jaké úlohy mám očekávat?</h3>
@@ -57,7 +57,7 @@
     <div class="panel panel-ksi">
       <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
       <div class="panel-body">
-        A: Student střední školy, který dosáhne alespoň 60&nbsp;% celkového počtu bodů.
+        A: Aktualizace 10.10.2016: <strike>Student střední školy</strike> Kdokoliv, kdo dosáhne alespoň 60&nbsp;% celkového počtu bodů.
       </div>
     </div>
 
