--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -1,6 +1,13 @@
 {{log model}}
 <section id="profile" class="container content-section">
     <div class="row">
+     {{#unless model.signed_in}}
+         <!-- Sem se muze dostat pri neuspesne refreshi tokenu -->
+         <div style="margin-top:30px">
+             {{warning-general text="Uživatel není přihlášen, proveďte odhlášení a opětovné přihlášení!"}}
+         </div>
+     {{else}}
+
         <div class="col-sm-12 col-md-3 col-print-4">
             <div style="margin-top:30px">
                 <img src="{{model.profile_picture_r}}" id="profile-picture-profile" />
@@ -208,5 +215,6 @@
                 {{/each}}
         {{/if}}
         </div>
+      {{/unless}}
     </div>
 </section>
