--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -1,4 +1,11 @@
 <section id="profile" class="container content-section">
+ {{#unless model.signed_in}}
+     <!-- Sem se muze dostat pri neuspesne refreshi tokenu -->
+     <div style="margin-top:30px">
+         {{warning-general text="Uživatel není přihlášen, proveďte odhlášení a opětovné přihlášení!"}}
+     </div>
+ {{else}}
+
     <div class="row flex-row-md stickycolumn-parent">
       <div class="col-sm-12 col-md-3">
         <div class="stickycolumn-parent" style="margin-top:30px">
@@ -22,4 +29,5 @@
         {{outlet}}
       </div>
   </div>
+  {{/unless}}
 </section>
