--- a/app/styles/components/orgs-list.scss
+++ b/app/styles/components/orgs-list.scss
@@ -1,6 +1,8 @@
-.orgPopup {
-    margin: auto;
-    /*font-size: 50px;*/
-    /*background-color: black;
-    background-opacity: 0.5;*/
+img.org {
+    max-width: 100%;
+    border-radius: 25px;
+    margin: 0 auto;
+    overflow:hidden;
+    position: relative;
+    max-height: 263px;
 }
