--- a/app/templates/components/orgs-list.hbs
+++ b/app/templates/components/orgs-list.hbs
@@ -1,13 +1,7 @@
 {{#each model as |org index|}}
     <div class="col-xs-6 col-md-3" style="text-align:center;">
       {{#link-to "user-profile" org}}
-          <img src="{{org.profile_picture_r}}" alt="Organizátor {{org.full_name}}" title="Skóre orga: {{org.score}}" style="
-            border-radius: 25px;
-            width: 100%;
-            margin: 0 auto;
-            overflow:hidden;
-            position: relative;"
-            >
+          <img src="{{org.profile_picture_r}}" class="org" alt="Organizátor {{org.full_name}}" title="Skóre orga: {{org.score}}">
       {{/link-to}}
       {{#link-to "user-profile" org}}
             <div class="org-index-name ">{{org.full_name}}</div>
