--- a/app/templates/orgs.hbs
+++ b/app/templates/orgs.hbs
@@ -9,5 +9,6 @@
     <div class="row">
         <h2>Ostatní organizátoři</h2>
         {{orgs-list model=orgs_other}}
+        {{orgs-const}}
     </div>
 </section>
