Everybody can be successful participant!
Close #282.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -78,7 +78,7 @@
     <div class="panel panel-ksi">
       <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i&nbsp;když nejsem student střední školy?</div>
       <div class="panel-body">
-        A: Ano, KSI může řešit kdokoli, avšak status úspěšného řešitele mohou získat pouze studenti středních škol.
+        A: Ano, KSI může řešit kdokoli.
       </div>
     </div>
 
