--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -5,9 +5,13 @@
         </div>
         <!-- TODO: center name and image -->
         <div class="row" style="padding-left:5px; margin-left: 20px">
-          <h5 class="inline">Autor: </h5>
+          <h5 class="inline">{{if model.co_author 'Autoři:' 'Autor:'}} </h5>
           {{#link-to "user-profile" model.author}}<img id="org-photo" class="inline" src="{{model.author.profile_picture_r}}" style="border-radius: 2px; width: 30px">
           <h5 id="org-name" class="inline" style="color: #39393a;text-decoration: none;"> {{model.author.full_name}}</h5>{{/link-to}}
+          {{#if model.co_author}}
+            , {{#link-to "user-profile" model.co_author}}<img id="org-photo" class="inline" src="{{model.co_author.profile_picture_r}}" style="border-radius: 2px; width: 30px">
+            <h5 id="org-name" class="inline" style="color: #39393a;text-decoration: none;"> {{model.co_author.full_name}}</h5>{{/link-to}}
+          {{/if}}
           <p class="task-points inline">Max. {{model.max_score}} {{points_text}}</p>
         </div>
         <div class="row" style="padding-left:5px; margin-left: 20px">
