Fix image resizing. Close #272.

--- a/app/styles/pages/task.scss
+++ b/app/styles/pages/task.scss
@@ -11,7 +11,8 @@
     }
 }
 
-:matches(#task-assignment #task-solution) img {
+#task-assignment img, #task-solution img {
     max-width: 100%;
     height: auto;
 }
+
