Show user`s co-tasks.

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -197,22 +197,15 @@
             <div style="margin-top:40px">
                     <h4>{{tasks}}</h4>
                     <hr>
-                </div>
+            </div>
 
-                {{#each model.tasks as |task|}}
-                <div class="panel panel-profile-assignment">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <img class="inline" src="{{task.picture}}" class="profile-picture-task">
-                                <label class="inline" style="margin-left:10px">{{#link-to "task" task}}{{{task.title}}}{{/link-to}}</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {{else}}
-                    <p>{{no_tasks}}</p>
-                {{/each}}
+            <!-- Org`s tasks -->
+            {{orgs-tasks model=model.tasks}}
+
+            <!-- Org`s co-tasks -->
+            {{orgs-tasks model=model.co_tasks}}
+
+            {{#unless model.any_task}}<p>{{no_tasks}}</p>{{/unless}}
         {{/if}}
         </div>
       {{/unless}}
