Unify alerts & nicer profile handling.

--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -154,14 +154,9 @@
     <label for="description">Notifikovat o reakci na můj komentář.</label>
   </div>
 
-  {{#if general_error}}
-    {{warning-close-general onClose="onErrorClose" text=general_error}}
-  {{/if}}
-  {{#if general_close_info}}
-    {{info-close-general onClose="onInfoClose" text=general_close_info}}
-  {{/if}}
+  <button type="submit" class="btn btn-primary {{if saving "disabled"}}"
+    style="margin-bottom:20px; width:100%;">{{if saving "Ukládám..." "Ulož změny"}}</button>
 
-  <button type="submit" class="btn btn-primary" style="margin-top:20px; width:100%;">
-    Ulož změny
-  </button>
+  {{ale-rt type=alertType closeBtn=alertCloseBtn text=alertMsg}}
+
 {{/validatable-form}}
