--- a/app/templates/settings/password.hbs
+++ b/app/templates/settings/password.hbs
@@ -10,15 +10,15 @@
         {{input value=new_password type="password" name="pass" placeholder="nové heslo" required=true pattern=".{6,}" class="form-control"}}
         <label>Ověření hesla:</label>
         {{input value=new_password2 type="password" name="pass" placeholder="nové heslo znovu" required=true pattern=".{6,}" class="form-control"}}
-        {{#if submit_error}}
-            {{warning-general text=submit_error}}
-        {{/if}}
-        
-        <button type="submit" class="btn btn-primary" style="margin-top:20px; width:100%;">
-            Změnit heslo!
+
+        {{ale-rt closeBtn=false type="danger" text=submit_error}}
+
+        <button type="submit" class="btn btn-primary {{if saving "disabled"}}"
+            style="margin-top:20px; margin-bottom:20px; width:100%;">
+            {{if saving "Měním heslo..." "Změnit heslo!"}}
         </button>
-        {{#if submit_message}}
-            {{info-general text=submit_message}}
-        {{/if}}
+
+        {{ale-rt type=alertType closeBtn=true text=alertMsg}}
+
     {{/validatable-form}}
 </div>
