--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -24,33 +24,27 @@
 
         {{year-sealed model=session.year_obj}}
 
-        {{#if info}}
-            <div class="alert alert-info">{{info}}</div>
-        {{/if}}
-
         {{#if new_thread}}
             {{#unless session.isAuthenticated}}
-                {{warning-login text="Pro založení nového vlákna musíš být přihlášen."}}
+                {{ale-rt type="warning" text="Pro založení nového vlákna musíš být přihlášen."}}
             {{else}}
                 <div style="margin-top:20px; margin-bottom:20px;">
-                    <div class="panel panel-default">
-                        <form class="form-horizontal" style="margin:30px">
+                    <div class="panel panel-default" style="padding: 30px">
+                        {{#validatable-form action="post_thread" model=model}}
                             <div class="controls form-inline">
-                                    {{#if thread_name_error}}
-                                        {{warning-general text=thread_name_error}}
-                                    {{/if}}
-                                    <label for="threadName">Název:</label>
-                                    {{input type="text" class="form-control full-width" id="threadName" value=thread_name}}
+                                <label for="threadName">Název vlákna:</label>
+                                {{input type="text" class="form-control full-width" id="threadName" value=thread_name maxlength=64 required=true}}
                             </div>
                             <div class="controls form-inline" style="margin-top:20px">
-                                    {{#if thread_content_error}}
-                                        {{warning-general text=thread_content_error}}
-                                    {{/if}}
-                                    <label for="threadName">Příspěvek:</label>
-                                    {{text-editor value=thread_content}}
+                                <label for="threadName">Příspěvek:</label>
+                                {{text-editor value=thread_content}}
                             </div>
-                            <button class="btn btn-primary" style="margin-top:20px" {{action "post_thread"}}>Odeslat</button>
-                        </form>
+                            <button type="submit" class="btn btn-primary {{if saving "disabled"}}"
+                                style="margin-top:20px; margin-bottom: 20px;">
+                                    {{if saving "Vytvářím vlákno..." "Vytvořit vlákno"}}</button>
+
+                            {{ale-rt type="danger" closeBtn=true show=show_error text=thread_error}}
+                        {{/validatable-form}}
                     </div>
                 </div>
             {{/unless}}
