Warning-general -> ale-rt in modules.

--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -30,15 +30,8 @@
                 {{/each}}
             </ul>
         {{/if}}
-        {{#if in_progress}}
-            <div style="margin-top:20px">
-                {{info-general text=progress_msg}}
-            </div>
-        {{/if}}
-        {{#if general_error}}
-            <div style="margin-top:20px">
-                {{warning-general text=general_error}}
-            </div>
-        {{/if}}
+
+        {{ale-rt type="info" text=progress_msg}}
+        {{ale-rt type="danger" show=show_error closeBtn=true text=general_error}}
     </div>
 {{/if}}
