--- a/app/templates/forgot-password.hbs
+++ b/app/templates/forgot-password.hbs
@@ -1,19 +1,21 @@
 <section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px">
-    <!-- Sekcia noviniek -->
   <h2>Zapomenuté heslo</h2>
   {{#if finished}}
-    {{info-general text="Email s instrukcemi ti byl poslán."}}
+      {{info-general text="Odeslali jsme ti e-mail s instrukcemi."}}
   {{else}}
-        <div class="alert alert-info">
-    Zapomněl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
-  </div>
+      <div class="alert alert-info">
+        Zapomněl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
+      </div>
+
       <div class="password-email-container">
         {{#validatable-form action="send" model=model}}
-            {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail"}}
-            <input type="submit" name="login"  class="btn btn-primary" value="Odeslat">
-            {{#if general_error}}
-                {{warning-general text=general_error}}
-            {{/if}}
+            <div class="form-group">
+                {{input value=model.email type="email" class="form-control" id="email" required=true placeholder="e-mail"}}
+            </div>
+
+            <input type="submit" name="login" class="btn btn-primary {{if sending "disabled"}}" value="{{if sending "Odesílám..." "Odeslat"}}">
+
+            {{ale-rt type="danger" closeBtn=true text=general_error}}
         {{/validatable-form}}
       </div>
   {{/if}}
