--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -57,5 +57,5 @@
         </section>
     </section>
 {{else}}
-    {{warning-general text="Tato úloha je uzamčena!"}}
+    {{ale-rt type="danger" text="Tato úloha je uzamčena!"}}
 {{/if}}
