--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -4,7 +4,7 @@
      {{#unless model.signed_in}}
          <!-- Sem se muze dostat pri neuspesne refreshi tokenu -->
          <div style="margin-top:30px">
-             {{warning-general text="Uživatel není přihlášen, proveďte odhlášení a opětovné přihlášení!"}}
+             {{ale-rt type="danger" text="Uživatel není přihlášen, proveďte odhlášení a opětovné přihlášení!"}}
          </div>
      {{else}}
 
