Add style to ale-rt.

--- a/app/templates/components/ale-rt.hbs
+++ b/app/templates/components/ale-rt.hbs
@@ -1,6 +1,6 @@
 {{#if show}}
 {{#if text}}
-<div class="alert alert-{{type}} {{class}}" role="alert" id={{id}}>
+<div class="alert alert-{{type}} {{class}}" role="alert" id={{id}} style="{{style}}">
     {{#if closeBtn}}
         <a href="#" class="close" aria-label="close" {{action "onClose"}}>&times;</a>
     {{/if}}
