--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -25,5 +25,6 @@
             {{/each}}
         </div>
     </div>
-    {{ale-rt type="danger" closeBtn=true text=general_error}}
+
+    {{ale-rt type="danger" closeBtn=true text=general_error style="margin-top:20px"}}
 </div>
