--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -81,5 +81,5 @@
     {{info-general text="Tuto úlohu jsi zatím neodevzdal."}} <!-- TODO -->
   {{/if}}
 {{else}}
-  {{warning-login text="Nejsi přihlášen"}}
+  {{ale-rt type="danger" text="Nejsi přihlášen"}}
 {{/if}}
