--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,5 +1,5 @@
 {{#unless session.isAuthenticated}}
-    {{warning-login text="nejsi přihlášen. Aby byly tvé operace uloženy, musíš se přihlásit."}}
+    {{ale-rt type="danger" text="Nejsi přihlášen. Aby byly tvé operace uloženy, musíš se přihlásit."}}
 {{/unless}}
 
 <h2 class="visible-print">Úlohy</h2>
