--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,6 +1,6 @@
 <section id="registration" class="container content-section">
     {{#if registration_done}}
-    {{info-general text="Registrace byla provedna. Nyní se můžeš přihlásit."}}
+    {{ale-rt type="info" text="Registrace byla provedna. Nyní se můžeš přihlásit."}}
   {{else}}
   {{#validatable-form action="register" model=model}}
     <div class="jumbotron" style="background-color: transparent">
