--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -78,7 +78,7 @@
       {{/if}}
   </div>
   {{else}}
-    {{info-general text="Tuto úlohu jsi zatím neodevzdal."}} <!-- TODO -->
+    {{ale-rt type="info" text="Tuto úlohu jsi zatím neodevzdal."}}
   {{/if}}
 {{else}}
   {{ale-rt type="danger" text="Nejsi přihlášen"}}
