--- a/app/templates/forgot-password.hbs
+++ b/app/templates/forgot-password.hbs
@@ -1,7 +1,7 @@
 <section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px">
   <h2>Zapomenuté heslo</h2>
   {{#if finished}}
-      {{info-general text="Odeslali jsme ti e-mail s instrukcemi."}}
+      {{ale-rt type="info" text="Odeslali jsme ti e-mail s instrukcemi."}}
   {{else}}
       <div class="alert alert-info">
         Zapomněl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
