Remove temporary info about successful participants.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -57,7 +57,7 @@
     <div class="panel panel-ksi">
       <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
       <div class="panel-body">
-        A: Aktualizace 10.10.2016: <strike>Student střední školy</strike> Kdokoliv, kdo dosáhne alespoň 60&nbsp;% celkového počtu bodů.
+        A: Kdokoliv, kdo dosáhne alespoň 60&nbsp;% celkového počtu bodů.
       </div>
     </div>
 
