--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -6,10 +6,8 @@
     <div class="jumbotron" style="background-color: transparent">
         <div class="alert alert-info" role="alert">
             Od ročníku 2016/2017 mohou KSI řešit bytosti všech věků a&nbsp;pohlaví.
-            <strike>Titul úspěšného řešitele a&nbsp;přijetí na FI však mohou získat pouze
-            studenti středních škol a&nbsp;víceletých gymnázií.</strike><br>
-            Aktualizace 10.10.2016: Titul úspěšného řešitele a možnost přijetí na FI
-            bez přijímacích zkoušek mohou získat i řešitelé v kategorii <i>Ostatní</i>.
+            Titul úspěšného řešitele a možnost přijetí na FI
+            bez přijímacích zkoušek mohou získat i&nbsp;řešitelé v&nbsp;kategorii <i>Ostatní</i>.
             Kategorie, do které budete zařazeni, se odvíjí od roku maturity,
             proto jej prosím vyplňte pečlivě.
         </div>
